--- a/documentation/asciidoc/topics/proc_specifying_server_image.adoc
+++ b/documentation/asciidoc/topics/proc_specifying_server_image.adoc
@@ -2,7 +2,7 @@
 = Specifying {brandname} Server images
 
 [role="_abstract"]
-Specify which {brandname} Server image {ispn_operator} should use to create nodes with the `spec.image` field.
+Specify which {brandname} Server image {ispn_operator} should use to create pods with the `spec.image` field.
 
 [source,yaml,options="nowrap",subs=attributes+]
 ----
