--- a/documentation/asciidoc/topics/con_hotrod_clients.adoc
+++ b/documentation/asciidoc/topics/con_hotrod_clients.adoc
@@ -6,9 +6,9 @@ Hot Rod is a binary TCP protocol that {brandname} provides for high-performance 
 
 .Client intelligence
 
-Client intelligence refers to mechanisms the Hot Rod protocol provides so that clients can locate and send requests to {brandname} nodes.
+Client intelligence refers to mechanisms the Hot Rod protocol provides so that clients can locate and send requests to {brandname} pods.
 
-Hot Rod clients running on {k8s} can access internal IP addresses for {brandname} nodes so you can use any client intelligence.
+Hot Rod clients running on {k8s} can access internal IP addresses for {brandname} pods so you can use any client intelligence.
 The default intelligence, `HASH_DISTRIBUTION_AWARE`, is recommended because it allows clients to route requests to primary owners, which improves performance.
 
 Hot Rod clients running outside {k8s} must use `BASIC` intelligence.
