--- a/documentation/asciidoc/topics/ref_cache_service_resources.adoc
+++ b/documentation/asciidoc/topics/ref_cache_service_resources.adoc
@@ -21,7 +21,7 @@ include::yaml/cache_service.yaml[]
 |Automatically creates a `ServiceMonitor` for your cluster.
 
 |`spec.replicas`
-|Specifies the number of pods in your cluster.
+|Specifies the number of pods in your cluster. If you enable autoscaling capabilities, this field specifies the initial number of pods.
 
 |`spec.service.type`
 |Configures the type {brandname} service. A value of `Cache` creates a cluster with {cacheservice} pods.
