--- a/documentation/asciidoc/topics/ref_default_credentials.adoc
+++ b/documentation/asciidoc/topics/ref_default_credentials.adoc
@@ -2,13 +2,11 @@
 = Default credentials
 
 [role="_abstract"]
-{ispn_operator} generates base64-encoded default credentials stored in an authentication secrets named
+{ispn_operator} generates base64-encoded credentials for the following users:
 
-[%header,cols=3*]
+[%autowidth,cols="1,1,1",stripes=even]
 |===
-|Username
-|Secret name
-|Description
+|User |Secret name |Description
 
 |`developer`
 |`{example_crd_name}-generated-secret`
