--- a/documentation/asciidoc/topics/con_managed_cross_site_connections.adoc
+++ b/documentation/asciidoc/topics/con_managed_cross_site_connections.adoc
@@ -15,18 +15,15 @@ image::operator-cross-site.png[This diagram depicts two clusters in separate dat
 endif::downstream[]
 
 Managed cross-site connections use tunnel pods to send RELAY messages to the correct cluster.
-These tunnel pods are GossipRouter instances that use the JGroups `TCPGOSSIP` protocol to fetch and maintain IP addresses for nodes in the cluster.
+These tunnel pods are GossipRouter instances that keep a record of all IP addresses for nodes in the cluster.
 
 To manage cross-site connections, {ispn_operator}:
 
 . Creates a tunnel pod for each cluster.
-. Uses the Kubernetes API to retrieve IP addresses for tunnel pods in all clusters.
-. Provides the IP addresses for tunnel pods to all nodes that send RELAY messages for cross-site replication.
+. Uses the Kubernetes API to retrieve IP addresses for the `<cluster_name>-site` service at each cluster.
+. Provides the `<cluster_name>-site` service details to all nodes that send RELAY messages for cross-site replication.
 
-[IMPORTANT]
-====
-{ispn_operator} in each {openshiftshort} cluster must have network access to the remote Kubernetes API.
-====
+Relay nodes can then connect to tunnel pods through the `<cluster_name>-site` service and perform cross-site replication.
 
 [discrete]
 == How managed cross-site connections work
@@ -36,7 +33,7 @@ Those nodes send RELAY messages to tunnel pods at random.
 The tunnel pods then parse the RELAY message headers to forward cross-site replication requests to the correct backup cluster.
 
 If a tunnel pod crashes then all nodes send RELAY messages to any other available tunnel pod because {ispn_operator} provides the IP addresses for all tunnel pods to all clusters.
-When this happens {ispn_operator} automatically creates a new tunnel pod in the cluster so it can handle RELAY messages.
+When this happens {k8s} automatically creates a new tunnel pod in the cluster to handle RELAY messages.
 
 [NOTE]
 ====
