--- a/documentation/asciidoc/stories/assembly_creating_caches.adoc
+++ b/documentation/asciidoc/stories/assembly_creating_caches.adoc
@@ -1,6 +1,6 @@
 ifdef::context[:parent-context: {context}]
-[id='cache-cr']
-:context: cache-cr
+[id='creating-caches']
+:context: creating-caches
 = Creating caches with {ispn_operator}
 
 [role="_abstract"]
@@ -30,9 +30,6 @@ include::{topics}/con_cache_cr.adoc[leveloffset=+1]
 include::{topics}/proc_creating_caches_xml.adoc[leveloffset=+1]
 include::{topics}/proc_creating_caches_templates.adoc[leveloffset=+1]
 
-//Adding Cache Configuration
-include::{topics}/proc_adding_backup_locations.adoc[leveloffset=+1]
-include::{topics}/con_backups_automatic_offline.adoc[leveloffset=+2]
 include::{topics}/proc_adding_cache_stores.adoc[leveloffset=+1]
 
 // Restore the parent context.
