--- a/documentation/asciidoc/titles/stories.adoc
+++ b/documentation/asciidoc/titles/stories.adoc
@@ -8,6 +8,7 @@ include::{stories}/assembly_authorization.adoc[leveloffset=+1]
 include::{stories}/assembly_network_access.adoc[leveloffset=+1]
 include::{stories}/assembly_cross_site_replication.adoc[leveloffset=+1]
 include::{stories}/assembly_monitoring.adoc[leveloffset=+1]
+include::{stories}/assembly_configuring_clusters.adoc[leveloffset=+1]
 include::{stories}/assembly_anti_affinity.adoc[leveloffset=+1]
 include::{stories}/assembly_creating_caches.adoc[leveloffset=+1]
 include::{stories}/assembly_batch_cr.adoc[leveloffset=+1]
