--- a/documentation/asciidoc/topics/attributes/community-attributes.adoc
+++ b/documentation/asciidoc/topics/attributes/community-attributes.adoc
@@ -12,7 +12,7 @@
 :community:
 
 //
-// Operator resources
+// Operator and Infinispan
 //
 
 :example_crd_name: example-infinispan
@@ -24,14 +24,10 @@
 :server_image: quay.io/infinispan/server
 :server_image_version: 13.0
 
-//
-// Infinispan
-//
-
 :ispn_operator: Infinispan Operator
 :ispn_operator_version: 2.2
 :ispn_version: 13.0
-:server_image_version: 13.0
+:schemaversion: 13.0
 :brandname: Infinispan
 :fullbrandname: Infinispan
 :datagridservice: Data Grid Service
@@ -70,3 +66,6 @@
 
 //Security Guide
 :security_docs: https://infinispan.org/docs/stable/titles/security/security.html
+
+//Helm chart
+:helm_chart_docs: https://infinispan.org/docs/helm-chart/main/helm-chart.html
